<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginTxt"
                android:hint="Task Title"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/loginTxt"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDate"
            app:startIconDrawable="@drawable/ic_baseline_date_range_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginTxt"
                android:hint="@string/task_date"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/loginTxt"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTime"
            app:startIconDrawable="@drawable/ic_baseline_alarm_on_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginTxt"
                android:hint="@string/task_time"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/loginTxt"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputBody"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLength="300"
                android:singleLine="false"
                android:gravity="start"
                android:textAlignment="viewStart"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checkedButton="@+id/radio_button_1"
            >

            <RadioButton
                android:id="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_1" />

            <RadioButton
                android:id="@+id/radio_button_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_2" />

            <RadioButton
                android:id="@+id/radio_button_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_3" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addArticleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="add"
            android:backgroundTint="@color/purple_700"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>